 * IntaRNA/OutputHandlerIntaRNA1 :
 * IntaRNA/OutputHandlerText :
     + data first written to local stream before pushed (via OMP critical) to
       final output stream. This should fix some multi-threading output issues.
 * IntaRNA/OutputHandlerText :
   + usage of reportedInteractions member
   * destructor() :
     + check if nothing was reported and provide according output
     
version 2.2.0

180319 Martin Raden :
 * IntaRNA/PredictorMfe2dHeuristic :
   * traceBack() :
     * bugfix: wrong sanity check in debug mode (thanks to Rick Gelhausen)
 * IntaRNA/Predictor :
   * updateOptima() :
     * bugfix: PredictionTracker call was not doing lastPos-handling
 * README.md : 
   + spotProb docu added
 + IntaRNA/PredictionTrackingSpotProb : tracks for a given set of interaction
   spots their probability to be covered/spanned by an interaction. furthermore,
   the probability that none of the spots of interest is covered is provided.
 + test/PredictionTrackingSpotProb
 * bin/CommandLineParsing :
   * OutputPrefixCodes :
     + OP_spotProb : for spotProb output mode
   + outSpotProbSpots : member to store the spots to be tracked (if provided)
   * --out argument :
   * validate_out() :
   * getPredictor() : 
     + handling of "spotProb" prefix for spot probability tracking

180312 Martin Raden :
 * IntaRNA/PredictorMaxProb :
 * IntaRNA/PredictorMfe :
   * updateOptima() :
     * bugfix : call of predTracker->updateOptimumCalled() was done without
       index offset information (fixes github issue #110) 
 * IntaRNA/AccessibilityVrna :
   * callbackForStorage() :
     * bugfix : copying was not heeding maximal interaction length 
       (fixes github issue #112)
 * configure :
   * bump VRNA dependency to v2.4.4 for recent SHAPE-related bugfix
 * README.md :
   + SHAPE-reactivity-related section 
 * IntaRNA/AccessibilityConstraint :
   + regexShapeMethod : regex for shapeMethod parsing
   + regexShapeConversion : regex for shapeConversion parsing