@@ -9,6 +9,8 @@
    + usage of reportedInteractions member
    * destructor() :
      + check if nothing was reported and provide according output
+ * bin/CommandLineParsing :
+   * "version" output extended with used VRNA and boost version
      
 version 2.2.0
 
